<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/intent_nav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateTo"
        android:text="@string/intent_navigation" />

    <Button
        android:id="@+id/intent_scheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateTo"
        android:text="@string/scheme_navigation" />

    <Button
        android:id="@+id/intent_http"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateTo"
        android:text="@string/http_navigation" />

    <Button
        android:id="@+id/intent_base"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateTo"
        android:text="@string/base_navigation" />

    <Button
        android:id="@+id/intent_derived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="navigateTo"
        android:text="@string/derived_navigation" />
</LinearLayout>